replaced jodatime with javatime